--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,11 @@ body{
 }
 .marca{
     text-align: center;
+    color: #8C55D4 ;
 }
 nav ul{
     list-style: none;
     text-align: center;
-    }
-    
-    ul li{
-        display: inline-block;
-        position: relative;
-        padding: 5px;
-        width: 15%;
-    }
-    ul li ul{
-        position: absolute;
-        display: none;
     }
     ul li ul li{
         display: block;
@@ -45,13 +35,18 @@ nav ul{
         background-color: #C46AEB;
     }
     ul li a{
-        color: #6D16D9 ;
+        color: black ;
         text-decoration: none;
         text-transform: uppercase;
         font-size: medium;
         border-radius: 5px;
         padding: 5px;
     }
+    .container-fluid{
+        background-color: #C9B0F5;
+    }
+    
+
 /*main*/
 main{
 min-height: calc(100vh - 100px - 300px);
@@ -76,14 +71,21 @@ min-height: calc(100vh - 100px - 300px);
     justify-content: right;
 }
 .box{
-    flex-basis: 50%;
-    text-align: right;
-    align-self: flex-end;
-    color: black;
+    
+    color: white;
+    align-items: flex-end;
+}
+.card-img{
+    max-width: 100%;
+    height: 70vh;
+    object-fit: cover; 
+    object-position: top;
 }
 span{
     font-size: 20px;
     letter-spacing: 3px;
+    background-color:#8C55D4 ;
+
 }
 h2{
     font-size: 25px;
@@ -129,27 +131,19 @@ h2{
 
 /*Footer*/
 
-.footer_flex{
-    flex-direction: column;
-    display: flex;
+.container-footer{
+    align-items: center;
     justify-content: center;
-    align-items:  center;
-    font-weight: 400;
-    font-size: 17px;
 }
 .N-P{
     font-weight: 600;
     font-family:sans-serif ;
     font-style: italic;
     justify-content:center ;
+    text-align: center;
     padding: 10px;
     letter-spacing: 5px;
     margin: 0 0 0 70px;
-}
-.formulario{
-    padding: 10px;
-    margin: 0 0 50px 0;
-
 }
 .redes_flex{
     display: flex;
@@ -165,9 +159,10 @@ h2{
 .btn_e{
 border-radius: 10px ;
 padding: 10px;
-margin: 20px 0 0 120px;
+margin: 20px 0 60px 360px;
     background-color: #8C55D4;
     color: white;
+    justify-content: center ;
 }
 .qsfooter{
     text-decoration: none ;
