--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,7 @@ main{
 min-height: calc(100vh - 100px - 300px);
     }
 /*main index*/
-.container{
-    display: flex;
-    max-width: 100%;
-    height: 70vh;
-    background-image: url(../images/banner.webp) ;
-    background-repeat: no-repeat;
-    background-size: cover ;
-    background-position: inherit ;
-}
+
 
 .wrap{
     max-width: 1400px;
@@ -191,26 +183,12 @@ margin: 20px 0 60px 360px;
 }
 
 /*Main QS*/
-.qsflex1{
-    display: flex;
+.row{
     align-items: center;
-    justify-content: center;
-    padding: 5px;
-    margin: 100px 200px 0 300px;
-    flex-grow: 1;
-}
-.qsflex2{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items:center;
-    justify-content:right ;
-    flex-grow: 1;
-    padding: 5px;
-    margin: 0 0 100px 300px;
+    justify-content: space-between;
 }
 .pqs{
-    max-width: 50%;
-    
+    max-width: 70%;
 }
 .imgqs{
     max-width: 80%;
