nesting, responsive, 4ta entrega proy final

--- a/css/custom.css
+++ b/css/custom.css
@@ -11119,57 +11119,53 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.navbar-light {
+header .navbar-light {
   background-color: #C9B0F5;
 }
-
-.navbar ul li:hover ul {
+header .navbar {
+  margin: 0;
+}
+header .navbar ul li:hover ul {
   display: block;
   background-color: #C9B0F5;
 }
-.navbar ul li:hover ul a:hover, .navbar ul li:hover ul a:focus {
+header .navbar ul li:hover ul a:hover, header .navbar ul li:hover ul a:focus {
   color: white;
   background-color: #C46AEB;
 }
-
-.marca {
+header .marca {
   text-align: center;
   color: #8C55D4;
 }
-
-.promo {
+header .promo {
   background-color: #8C55D4;
   color: white;
   text-align: center;
   font-weight: 400;
 }
 
-.card-img {
+.mainindex .card-img {
   max-width: 100%;
   height: 70vh;
   object-fit: cover;
   object-position: top;
 }
-
-span {
+.mainindex span {
   font-size: 20px;
   letter-spacing: 3px;
   background-color: #8C55D4;
 }
-
-h2, .h2 {
+.mainindex h2, .mainindex .h2 {
   font-size: 25px;
   line-height: 1.2;
   padding-bottom: 10px;
 }
-
-.botones {
+.mainindex .botones {
   display: flex;
   margin-top: 30px;
   flex-flow: row-reverse;
 }
-
-.btn1 {
+.mainindex .btn1 {
   flex-basis: 30%;
   border: solid 3px;
   border-radius: 20px;
@@ -11180,12 +11176,10 @@ h2, .h2 {
   color: #6D16D9;
   font-weight: 600;
 }
-
-.btn1:hover {
+.mainindex .btn1:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
-
-.btn2 {
+.mainindex .btn2 {
   flex-basis: 30%;
   border: solid 3px;
   border-radius: 20px;
@@ -11197,17 +11191,26 @@ h2, .h2 {
   background-color: #C9B0F5;
   font-weight: 600;
 }
-
-.btn2:hover {
+.mainindex .btn2:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.container-footer {
+footer {
+  background-image: url(../images/wave2.svg);
+  background-repeat: no-repeat;
+  position: relative;
+  justify-content: end;
+  align-items: flex-end;
+  height: 100%;
+  margin: 0;
+  background-position-y: bottom;
+  background-size: cover;
+}
+footer .container-footer {
   align-items: center;
   justify-content: center;
 }
-
-.N-P {
+footer .N-P {
   font-weight: 600;
   font-family: sans-serif;
   font-style: italic;
@@ -11217,55 +11220,39 @@ h2, .h2 {
   letter-spacing: 5px;
   margin: 0 0 0 70px;
 }
-
-.redes_flex {
+footer .redes_flex {
   display: flex;
   align-items: center;
   padding: 10px;
-  margin: 0 0 0 90px;
+  margin: 0 0 0;
 }
-
-.logo {
+footer .logo {
   max-width: 40px;
   padding: 5px;
   margin: 1 px 3px 3px 10px;
 }
-
-.btn_e {
+footer .btn_e {
   border-radius: 10px;
   padding: 10px;
-  margin: 20px 0 60px 360px;
+  margin: 20px 0 60px 50px;
   background-color: #8C55D4;
   color: white;
   justify-content: center;
 }
-
-.qsfooter {
+footer .qsfooter {
   text-decoration: none;
   padding: 5px;
-  margin: 10px 0 20px 60px;
+  margin: 10px 0 20px 0;
   font-size: 20px;
   font-weight: 400;
   background-color: #C9B0F5;
   color: black;
 }
-
-.copy {
+footer .copy {
   font-weight: 400;
   color: black;
   align-self: center;
-  margin: 0 0 0 80px;
-}
-
-.onda {
-  background-image: url(../images/wave.svg);
-  background-repeat: no-repeat;
-  position: relative;
-  justify-content: end;
-  align-items: flex-end;
-  height: 100%;
-  margin: 0;
-  background-position-y: bottom;
+  margin: 0 0 0 0;
 }
 
 .pqs {
@@ -11273,7 +11260,8 @@ h2, .h2 {
 }
 
 .imgqs {
-  max-width: 100%;
+  max-width: 50vw;
+  margin: 0;
 }
 
 h3, .h3 {
@@ -11286,11 +11274,15 @@ h3, .h3 {
   letter-spacing: 6px;
   font-family: serif;
   margin: 50px 0 0 0;
-  width: 480px;
+  width: 60vw;
 }
 
 .row {
   align-items: center;
+}
+
+.input-group {
+  max-width: 80vw;
 }
 
 /*# sourceMappingURL=custom.css.map */
